# nextbird

./: .gitignore  Makefile.am  README.md  configure.ac  corebird.gresource.xml  meson.build  nextbird.gresource.xml
.tx/: config
data/: .gitignore  Makefile.am  corebird.1  de.lucaswerkmeister.corebird.appdata.xml.in  de.lucaswerkmeister.corebird.gschema.xml  de.lucaswerkmeister.corebird.service.in  de.lucaswerkmeister.nextbird.appdata.xml.in  de.lucaswerkmeister.nextbird.desktop.in  de.lucaswerkmeister.nextbird.gschema.xml  de.lucaswerkmeister.nextbird.service.in  meson.build  nextbird.1  org.baedert.corebird.appdata.xml.in  render-icons.sh
data/hicolor/128x128/apps/: Makefile.am
data/hicolor/16x16/apps/: Makefile.am
data/hicolor/24x24/apps/: Makefile.am
data/hicolor/256x256/apps/: Makefile.am
data/hicolor/32x32/apps/: Makefile.am
data/hicolor/48x48/apps/: Makefile.am
data/hicolor/64x64/apps/: Makefile.am
data/hicolor/96x96/apps/: Makefile.am
examples/: Makefile.am  meson.build  tweetstates.vala
po/: Makevars  POTFILES.in  ar.po  ast.po  ca.po  ca@valencia.po  corebird.pot  de.po  en_AU.po  eo.po  es.po  es_419.po  es_MX.po  es_VE.po  fa.po  fi.po  fr.po  ga.po  gl.po  hi.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  meson.build  nb.po  nextbird.pot  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sr.po  sr@latin.po  tr.po  uk_UA.po  zh_CN.po  (+1 more)
sql/accounts/: Create.1.sql
src/: Account.vala  CbAvatarCache.c  CbAvatarCache.h  CbBundle.c  CbBundle.h  CbBundleHistory.c  CbBundleHistory.h  CbComposeJob.c  CbComposeJob.h  CbDeltaUpdater.c  CbDeltaUpdater.h  CbEmojiChooser.c  CbEmojiChooser.h  CbFilter.c  CbFilter.h  CbGtkCompat.h  CbMedia.c  CbMedia.h  CbMediaDownloader.c  CbMediaDownloader.h  CbMediaImageWidget.c  CbMediaImageWidget.h  CbMediaVideoWidget.c  CbMediaVideoWidget.h  CbMessageReceiver.c  CbMessageReceiver.h  CbSnippetManager.c  CbSnippetManager.h  CbSurfaceProgress.c  CbSurfaceProgress.h  CbTextTransform.c  CbTextTransform.h  CbTweet.c  CbTweet.h  CbTweetModel.c  CbTweetModel.h  CbTwitterItem.c  CbTwitterItem.h  CbTypes.c  CbTypes.h  (+32 more)
src/async/: Collect.vala
src/list/: AddListEntry.vala  DMListEntry.vala  DMThreadEntry.vala  FavImageRow.vala  FilterListEntry.vala  ListListEntry.vala  NewListEntry.vala  SnippetListEntry.vala  StartConversationEntry.vala  TweetListEntry.vala  UserFilterEntry.vala  UserListEntry.vala
src/model/: DMThreadsModel.vala
src/sql/: Database.vala  InsertStatement.vala  SelectStatement.vala  UpdateStatement.vala
src/util/: Benchmark.vala  Dirs.vala  TweetUtils.vala  UserCompletion.vala  UserUtils.vala  Utils.vala
src/widgets/: AccountCreateWidget.vala  AddImageButton.vala  AspectImage.vala  AvatarBannerWidget.vala  AvatarWidget.vala  BadgeRadioButton.vala  CompletionTextView.vala  ComposeImageManager.vala  CropWidget.vala  DMPlaceholderBox.vala  DoubleTapButton.vala  FavImageView.vala  FollowButton.vala  ImpostorWidget.vala  LazyMenuButton.vala  MaxSizeContainer.vala  MediaButton.vala  MultiMediaWidget.vala  PixbufButton.vala  ReplyEntry.vala  ReplyIndicator.vala  ScrollWidget.vala  TextButton.vala  TweetListBox.vala  UserListsWidget.vala
src/window/: AboutDialog.vala  AccountDialog.vala  ComposeTweetWindow.vala  MediaDialog.vala  ModifyFilterDialog.vala  ModifySnippetDialog.vala  SettingsDialog.vala  UserListDialog.vala
tests/: Makefile.am  dmmanager.vala  meson.build  tweetparsing.vala
ui/: about-dialog.ui  account-create-widget.ui  compose-window.ui  style.css  tweet-info-page.ui  tweet-list-entry.ui  user-list-entry.ui
